# kotlin-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  build.gradle  gradlew  settings.gradle  tsan_options
src/main/: CMakeLists.txt
src/main/cpp/: agent.cpp  agent.hpp
src/main/cpp/concurrentCollections/: concurrentList.h  concurrentMap.h  concurrentVector.h
src/main/cpp/jni/: jni_instrumentator.cpp  jni_instrumentator.h
src/main/cpp/profiler/: args.h  instrumentation.cpp  instrumentation.hpp  profiler.cpp  profiler.h  profiler.hpp
src/main/cpp/profiler/model/: args.hpp  asyncTrace.h  asyncTrace.hpp  trace.h  trace.hpp
src/main/cpp/profiler/unwind/: apple_aarch64.inline.hpp  apple_x86_64.inline.hpp  linux_aarch64.inline.hpp  linux_x86_64.inline.hpp
src/main/cpp/trace/: coroutineTrace.cpp  coroutineTrace.h  coroutineTrace.hpp  traceStorage.cpp  traceStorage.hpp  traceTime.cpp  traceTime.hpp
src/main/cpp/utils/: argsParser.cpp  argsParser.h  argsParser.hpp  concurrentList.h  concurrentMap.h  jarLoader.cpp  jarLoader.h  jarLoader.hpp  log.h  pointerValidation.cpp  pointerValidation.h  suspensionPlot.cpp  suspensionPlot.hpp  traceStorage.cpp  traceStorage.h  traceTime.cpp  traceTime.h
src/main/cpp/vm/: jvm.cpp  jvm.h  jvm.hpp  jvmCodeCache.cpp  jvmCodeCache.h  vmStructs.cpp  vmStructs.h
src/main/java/io/inst/: CoroutineInstrumentator.java  TrackableContinuation.java
src/main/java/io/inst/javassist/: ByteArrayClassPath.java  CannotCompileException.java  ClassClassPath.java  ClassMap.java  ClassPath.java  ClassPool.java  ClassPoolTail.java  CodeConverter.java  CtArray.java  CtBehavior.java  CtClass.java  CtClassType.java  CtConstructor.java  CtField.java  CtMember.java  CtMethod.java  CtNewClass.java  CtNewConstructor.java  CtNewMethod.java  CtNewWrappedConstructor.java  CtNewWrappedMethod.java  CtPrimitiveType.java  Loader.java  LoaderClassPath.java  Modifier.java  NotFoundException.java  SerialVersionUID.java  Translator.java  URLClassPath.java  package.html
src/main/java/io/inst/span/: CoroutineTrace.java
src/main/protos/perfetto/bigtrace/: orchestrator.pb.cc  orchestrator.pb.h  worker.pb.cc  worker.pb.h
src/main/protos/perfetto/common/: android_energy_consumer_descriptor.pb.cc  android_energy_consumer_descriptor.pb.h  android_log_constants.pb.cc  android_log_constants.pb.h  builtin_clock.pb.cc  builtin_clock.pb.h  commit_data_request.pb.cc  commit_data_request.pb.h  data_source_descriptor.pb.cc  data_source_descriptor.pb.h  descriptor.pb.cc  descriptor.pb.h  ftrace_descriptor.pb.cc  ftrace_descriptor.pb.h  gpu_counter_descriptor.pb.cc  gpu_counter_descriptor.pb.h  interceptor_descriptor.pb.cc  interceptor_descriptor.pb.h  observable_events.pb.cc  observable_events.pb.h  perf_events.pb.cc  perf_events.pb.h  protolog_common.pb.cc  protolog_common.pb.h  semantic_type.pb.cc  semantic_type.pb.h  sys_stats_counters.pb.cc  sys_stats_counters.pb.h  system_info.pb.cc  system_info.pb.h  trace_stats.pb.cc  trace_stats.pb.h  tracing_service_capabilities.pb.cc  tracing_service_capabilities.pb.h  tracing_service_state.pb.cc  tracing_service_state.pb.h  track_event_descriptor.pb.cc  track_event_descriptor.pb.h
src/main/protos/perfetto/config/: data_source_config.pb.cc  data_source_config.pb.h  interceptor_config.pb.cc  interceptor_config.pb.h  perfetto_config.pb.cc  perfetto_config.pb.h  stress_test_config.pb.cc  stress_test_config.pb.h  test_config.pb.cc  test_config.pb.h  trace_config.pb.cc  trace_config.pb.h
src/main/protos/perfetto/config/android/: android_game_intervention_list_config.pb.cc  android_game_intervention_list_config.pb.h  android_input_event_config.pb.cc  android_input_event_config.pb.h  android_log_config.pb.cc  android_log_config.pb.h  android_polled_state_config.pb.cc  android_polled_state_config.pb.h  android_sdk_sysprop_guard_config.pb.cc  android_sdk_sysprop_guard_config.pb.h  android_system_property_config.pb.cc  android_system_property_config.pb.h  app_wakelock_config.pb.cc  app_wakelock_config.pb.h  cpu_per_uid_config.pb.cc  cpu_per_uid_config.pb.h  inputmethod_config.pb.cc  inputmethod_config.pb.h  kernel_wakelocks_config.pb.cc  (+17 more)
src/main/protos/perfetto/ipc/: consumer_port.pb.cc  consumer_port.pb.h  producer_port.pb.cc  producer_port.pb.h  relay_port.pb.cc  relay_port.pb.h  wire_protocol.pb.cc  wire_protocol.pb.h
src/main/protos/perfetto/metrics/: custom_options.pb.cc  custom_options.pb.h  metrics.pb.cc  metrics.pb.h
src/main/protos/perfetto/perfetto_sql/: structured_query.pb.cc  structured_query.pb.h
src/main/protos/perfetto/proto_filtering/: proto_filter_options.pb.cc  proto_filter_options.pb.h
src/main/protos/perfetto/protovm/: vm_program.pb.cc  vm_program.pb.h
src/main/protos/perfetto/trace/: clock_snapshot.pb.cc  clock_snapshot.pb.h  evdev.pb.cc  evdev.pb.h  extension_descriptor.pb.cc  extension_descriptor.pb.h  memory_graph.pb.cc  memory_graph.pb.h  remote_clock_sync.pb.cc  remote_clock_sync.pb.h  test_event.pb.cc  test_event.pb.h  test_extensions.pb.cc  test_extensions.pb.h  trace.pb.cc  trace.pb.h  trace_packet.pb.cc  trace_packet.pb.h  trace_packet_defaults.pb.cc  trace_packet_defaults.pb.h  trace_uuid.pb.cc  trace_uuid.pb.h  trigger.pb.cc  trigger.pb.h  ui_state.pb.cc  ui_state.pb.h
src/main/protos/perfetto/trace_processor/: metatrace_categories.pb.cc  metatrace_categories.pb.h  metrics_impl.pb.cc  metrics_impl.pb.h  serialization.pb.cc  serialization.pb.h  stack.pb.cc  stack.pb.h  trace_processor.pb.cc  trace_processor.pb.h
src/main/protos/perfetto/trace_summary/: file.pb.cc  file.pb.h  v2_metric.pb.cc  v2_metric.pb.h
src/test/: CMakeLists.txt
src/test/cpp/: argsParserTest.cpp  instrumentationTest.cpp  instrumentation_test.hpp  traceStorageTest.cpp
src/test/cpp/concurrentCollections/: concurrentListTest.cpp  concurrentMapTest.cpp  concurrentVectorTest.cpp
src/test/cpp/jni/: jniInstrumentatorTest.cpp
src/test/cpp/mock/: agentThrow.cpp
src/test/cpp/utils/: config.h.in  pointerValidationTest.cpp
src/test/kotlin/io.github.maximgorbunov/: InstrumentationTest.kt
(+855 files in other folders)
